feat: add authentication system with registration and login

--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,13 +14,17 @@
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
     "@teamer/shared": "workspace:*",
+    "@types/bcryptjs": "^3.0.0",
     "@types/dotenv": "^8.2.3",
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.1",
     "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
