--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -9,14 +9,16 @@
     "lint": "eslint src --ext .ts,.tsx"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.13.0",
+    "@mui/material": "^5.13.0",
+    "@mui/x-date-pickers": "^7.28.3",
     "@teamer/shared": "workspace:*",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "@mui/material": "^5.13.0",
-    "@mui/icons-material": "^5.13.0",
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0"
+    "react-router-dom": "^6.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.0",
@@ -33,4 +35,4 @@
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.15.0"
   }
-} 
+}
