--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.13.0",
     "@mui/x-date-pickers": "^7.28.3",
     "@teamer/shared": "workspace:*",
+    "axios": "^1.8.4",
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
